Fixed create issues

--- a/views/home.html
+++ b/views/home.html
@@ -141,7 +141,9 @@
 										</div>
 									</div>
 									<div ng-switch-when="2" class="my-switch-animation">
-										to be made
+										Title: <input type="text" id="Title"><br>
+										Body: <input type="text" id="Body"><br>
+										<input type="submit" ng-click="CreateIssue()">
 									</div>
 								</div>
 									
