--- a/public/stylesheets/BootstrapOverride.css
+++ b/public/stylesheets/BootstrapOverride.css
@@ -13,6 +13,7 @@
 .searchbar-fix{
 	margin-top: 10;
 	margin-bottom: 10;
+	width: 100%;
 }
 
 .list-fix{
@@ -31,7 +32,7 @@
 
 .PrimaryColor{
 	background-color:#009688;
-	min-height: 100%;
+	min-height: 90%;
 }
 
 .HeaderColor{
@@ -40,7 +41,8 @@
 
 .SecondaryColor{
 	background-color:#4db6ac;
-	min-height: 100%;
+	min-height: 90%;
+	padding-bottom:10px;
 }
 
 .AccentColorSignIn{
@@ -50,7 +52,6 @@
 .panel-body {
   position:relative; 
   overflow: hidden;
-  min-height: 100%;
 }
 
 .my-switch-animation.ng-enter,
