--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  padding: 500px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -22,6 +22,7 @@ a {
 .searchbar-fix{
   margin-top: 10;
   margin-bottom: 10;
+  width: 100%;
 }
 
 .list-fix{
