--- a/public/stylesheets/BootstrapOverride.css
+++ b/public/stylesheets/BootstrapOverride.css
@@ -15,6 +15,22 @@
 	height: 33px;
 	margin-top: 1px;
 
+
+.TextArea{
+    float:right;
+    overflow: auto;
+    border: solid 3px;
+}
+
+#CommitPage{
+    border: solid 3px red;
+    display: block;
+}
+
+
+.CommitArea{
+    border: solid 5px blue;
+
 }
 
 .SignIn-fix{
