Forgot to push bootstrap

--- a/public/stylesheets/BootstrapOverride.css
+++ b/public/stylesheets/BootstrapOverride.css
@@ -10,10 +10,11 @@
 
 }
 
-.btn-fix2{
-	width: 33px;
-	height: 33px;
-	margin-top: 1px;
+.btn-fix2 {
+    width: 33px;
+    height: 33px;
+    margin-top: 1px;
+}
 
 
 .TextArea{
