--- a/views/home.html
+++ b/views/home.html
@@ -43,18 +43,18 @@
 				</div>
 
 				<div class="btn-group-vertical" role="group">
-					<div ng-repeat="name in RepoNamesSplit | filter:Search" ng-click="RepoStatistics()" class="btn-group btn-width-fix" role="group">
+					<div ng-repeat="person in RepoNamesSplit | filter:Search" ng-click="RepoStatistics()" class="btn-group btn-width-fix" role="group">
 						
 						<div class="btn-group" role"group">
 
 							<div class="btn-group" role="group">
-								<button type="button" ng-click="do(name)" class="btn btn-group btn-fix" role="group" ng-class="{'true':'btn-primary','false':'btn-default'}[selectedPerson == name]">
-								{{name}}
+								<button type="button" ng-click="do(person.name)" class="btn btn-group btn-fix" role="group" ng-class="{'true':'btn-primary','false':'btn-default'}[selectedPerson == person.name]">
+								{{person.name}}
 								</button>
 							</div>
 
 							<div class="btn-group" role="group">
-								<button type="button" class="btn btn-default btn-group disabled btn-fix2" role="group" ng-class="{'orange':'btn-warning','red':'btn-danger','green':'btn-success'}[selectedPerson == name]"></button>
+								<button type="button" class="btn btn-default btn-group btn-fix2" role="group" ng-class="{'Red':'btn-danger','Orange':'btn-warning','Green': 'btn-success'}[person.color]"></button>
 							</div>
 						</div>
 					</div>						
