--- a/views/home.html
+++ b/views/home.html
@@ -45,7 +45,7 @@
 				<div class="btn-group-vertical" role="group">
 					<div ng-repeat="person in RepoNamesSplit | filter:Search" ng-click="RepoStatistics()" class="btn-group btn-width-fix" role="group">
 						
-						<div class="btn-group" role"group">
+						<div class="btn-group" role="group">
 
 							<div class="btn-group" role="group">
 								<button type="button" ng-click="do(person.name)" class="btn btn-group btn-fix" role="group" ng-class="{'true':'btn-primary','false':'btn-default'}[selectedPerson == person.name]">
