Cleanup + Added some functionality

--- a/views/home.html
+++ b/views/home.html
@@ -44,7 +44,7 @@
 				</div>
 
 				<div class="btn-group-vertical" role="group">
-					<div ng-repeat="person in RepoNamesSplit | filter:Search" ng-click="RepoStatistics()" class="btn-group btn-width-fix" role="group">
+					<div ng-repeat="person in RepoNamesSplit | filter:Search" ng-click="RepoStatistics()" class="btn-group btn-width-fix" role="group" id="parent">
 						
 						<div class="btn-group" role="group">
 
@@ -101,6 +101,7 @@
 						<p>This Weeks Commits: {{LastCommithtml}}</p>
 						<p>Total Commits: {{TotalCommithtml}}</p>
 						<p>New logs: {{NewLogInfo}}</p>
+						<p>Latest Log: {{LastPushDate}}</p>
 						<button id="ShowLog" ng-click="ShowLog()">Show new Log</button>
 						<p ng-bind-html="rawLog"></p>
 						<button ng-click="ShowCharts()">Show Charts</button>
@@ -111,9 +112,9 @@
 								<div ng-repeat="StudentCommit in AllCommits track by $index" class="CommitArea">
 									<li ng-click="SelectCommit($index)">Commit: {{StudentCommit}} </li>
 								</div>
-								<div  class="pull-right col-md-3">
+								<div  class="pull-right col-md-3" id="CommentArea">
 									<div> {{CommentInfo}}</div>
-									<textarea rows="10" class="form-control" id="CommentArea"></textarea>
+									<textarea rows="10" class="form-control"></textarea>
 									<button class="btn btn-success"ng-click="PostComment()">Comment</button>
 								</div>
 							</div>
