--- a/public/stylesheets/BootstrapOverride.css
+++ b/public/stylesheets/BootstrapOverride.css
@@ -16,32 +16,32 @@
     margin-top: 1px;
 }
 
-
-.TextArea{
-    float:right;
-    overflow: auto;
-    border: solid 3px;
-}
-
 #CommitPage{
-    border: solid 3px red;
-    display: block;
+	display: inline-block;
+	overflow: hidden;
+	clear: both;
 }
 
 
 .CommitArea{
-    border: solid 5px blue;
+	float: left;
+	width: 70%;
+}
 
+
+#CommentArea{
+	margin-left: 2%;
+	overflow: hidden;
 }
 
 .SignIn-fix{
-	margin-right: 30;
-	margin-bottom: 20;
+	margin-right: 30px;
+	margin-bottom: 20px;
 }
 
 .searchbar-fix{
-	margin-top: 10;
-	margin-bottom: 10;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	width: 100%;
 }
 
