--- a/views/home.html
+++ b/views/home.html
@@ -108,10 +108,13 @@
 					<div ng-switch-when="2" class="my-switch-animation" ng-click = "RepoInfo()">
 						<div class="panel-body" ng-switch="div_RepoHulpMenu"  id="CommitPage">
 							<div ng-switch-when="1" class="my-switch-animation" >
-								<div ng-repeat="StudentCommit in AllCommits track by $index" class="CommitArea">
-									<li ng-click="SelectCommit($index)">Commit: {{StudentCommit}} </li>
+								<div class="Commitfix1" style="overflow-y:scroll;height:55%;">
+									<div ng-repeat="StudentCommit in AllCommits track by $index">
+										<li ng-click="SelectCommit($index)">Commit: {{StudentCommit}} </li>
+									</div>
 								</div>
-								<div  class="pull-right" id="CommentArea">
+								
+								<div class="Commitfix2">
 									<div> {{CommentInfo}}</div>
 									<textarea rows="10" class="form-control"></textarea>
 									<button class="btn btn-success"ng-click="PostComment()">Comment</button>
